[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "igsm"
version = "0.1.0"
description = "iGSM: Infinite Grade School Math problem generator"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "networkx",
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_gen*", "tools*"]
